--- a/inventory.ini
+++ b/inventory.ini
@@ -4,3 +4,6 @@
 [worker]
 192.168.99.21 ansible_ssh_private_key_file=.vagrant/machines/worker1/virtualbox/private_key ansible_ssh_user=vagrant ansible_ssh_extra_args='-o StrictHostKeyChecking=no' ansible_python_interpreter=/usr/bin/python3
 192.168.99.22 ansible_ssh_private_key_file=.vagrant/machines/worker2/virtualbox/private_key ansible_ssh_user=vagrant ansible_ssh_extra_args='-o StrictHostKeyChecking=no' ansible_python_interpreter=/usr/bin/python3
+
+[db]
+192.168.99.10 ansible_ssh_private_key_file=.vagrant/machines/db/virtualbox/private_key ansible_ssh_user=vagrant ansible_ssh_extra_args='-o StrictHostKeyChecking=no' ansible_python_interpreter=/usr/bin/python3
