--- a/requirements.yml
+++ b/requirements.yml
@@ -10,3 +10,5 @@
   version: master
 - src: git+https://github.com/geerlingguy/ansible-role-ruby.git
   version: master
+- src: git+https://github.com/geerlingguy/ansible-role-mysql.git
+  version: master
